--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,17 @@
-header img {
-  height: 100px;
-}
-.headLog {
-  height: 200px;
-  width: 100%;
-}
 .app-wrapper {
   display: grid;
   margin: 0 auto;
   width: 1200px;
 
-grid-template-areas:
-                    "h h" 
-                    "n c";
-  grid-template-columns:60px 1fr;
-  grid-template-rows:2fr 10fr;
-  grid-gap:10px;
+  grid-template-areas:
+    "h h"
+    "n c";
+  grid-template-columns: 150px 1fr;
+  grid-template-rows: 2fr 10fr;
+  grid-gap: 10px;
 }
-.header {
-grid-area: h;
-background-color: green;
-}
-.nav {
-  grid-area: n;
-  background-color: bisque;
-}
-.content {
+
+.app-wrapper-content {
   grid-area: c;
-  background-color: aquamarine;
-}
-.avatar {
-  height:70px ;
+  background-color: bisque;
 }
